Scrollbar flickering bug fix

--- a/src/sass/left_pane.scss
+++ b/src/sass/left_pane.scss
@@ -10,7 +10,6 @@
   height: 100%;
   width: 100%;
 
-  overflow: auto;
   overflow-x: hidden;
 
   font-size: 14px;
