--- a/src/sass/right_pane.scss
+++ b/src/sass/right_pane.scss
@@ -5,7 +5,6 @@
 
   height: 100%;
   width: 100%;
-  overflow: auto;
   overflow-x: hidden;
 
   &::-webkit-scrollbar {
